// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applyEvents should be idempotent 1`] = `
Object {
  "events": Array [
    Object {
      "type": "USER_UPDATED",
      "username": "bob2@example.com",
    },
    Object {
      "guid": "0x0...",
      "type": "DEVICE_LINKED",
    },
    Object {
      "type": "USER_REGISTERED",
      "username": "alice@example.com",
    },
    Object {
      "type": "USER_REGISTERED",
      "username": "bob@example.com",
    },
    Object {
      "guid": "0x0...",
      "type": "DEVICE_REGISTERED",
    },
  ],
  "eventsProcessed": 5,
}
`;

exports[`applyEvents should be idempotent 2`] = `
Object {
  "events": Array [
    Object {
      "type": "USER_UPDATED",
      "username": "bob2@example.com",
    },
    Object {
      "guid": "0x0...",
      "type": "DEVICE_LINKED",
    },
    Object {
      "type": "USER_REGISTERED",
      "username": "alice@example.com",
    },
    Object {
      "type": "USER_REGISTERED",
      "username": "bob@example.com",
    },
    Object {
      "guid": "0x0...",
      "type": "DEVICE_REGISTERED",
    },
    Object {
      "type": "USER_UPDATED",
      "username": "bob2@example.com",
    },
    Object {
      "guid": "0x0...",
      "type": "DEVICE_LINKED",
    },
    Object {
      "type": "USER_REGISTERED",
      "username": "alice@example.com",
    },
    Object {
      "type": "USER_REGISTERED",
      "username": "bob@example.com",
    },
    Object {
      "guid": "0x0...",
      "type": "DEVICE_REGISTERED",
    },
  ],
  "eventsProcessed": 10,
}
`;

exports[`applyEvents should support custom event filters 1`] = `
Object {
  "events": Array [
    Object {
      "type": "USER_UPDATED",
      "username": "bob2@example.com",
    },
    Object {
      "guid": "0x0...",
      "type": "DEVICE_LINKED",
    },
    Object {
      "type": "USER_REGISTERED",
      "username": "bob@example.com",
    },
  ],
  "eventsProcessed": 3,
}
`;
